<resources>
    <string name="app_name">Chateo</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="welcome_illustration">Welcome Illustration</string>
    <string name="connect_eas">
Connect easily with your family and friends over countries
</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="_92">+92</string>
    <string name="continue_to_ptp">Continue</string>
    <string name="enter_code">Enter Code</string>
    <string name="we_have_sent_you_an_sms_with_the_code_to_62_1309_1710_1920">We have sent you an SMS with the code to +92 324 4394840</string>
    <string name="resend_code">Resend Code</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="save">Save</string>
    <string name="first_name_required">First Name (Required)</string>
    <string name="last_name_optional">Last Name (Optional)</string>
    <string name="avatar">Avatar</string>
    <string name="plus_icon">plus_icon</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">+</string>
    <string name="search">🔍   Search</string>
    <string name="dot">.</string>
    <string name="chats">Chats</string>
    <string name="more">more</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_icon">add_icon</string>
    <string name="name_muneeb">Muneeb</string>
    <string name="settings">Settings</string>
    <string name="accounts">Account</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="logout">Logout</string>
</resources>