<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingTop="45dp"
    android:paddingBottom="15dp"
    tools:context=".Welcome">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="270dp"
        android:contentDescription="@string/welcome_illustration"
        android:src="@drawable/illustration"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="280dp"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_eas"
        android:textSize="24sp"
        android:textColor="#0F1828"
        android:fontFamily="@font/mulish_bold"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:paddingHorizontal="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="47dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_privacy_policy"
            android:textSize="14sp"
            android:textColor="#0F1828"
            android:layout_above="@+id/start_messaging"
            android:fontFamily="@font/mulish_bold"
            android:layout_marginVertical="12dp"
            />

        <Button
            android:id="@+id/start_messaging"
            android:text="@string/start_messaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:paddingVertical="18dp"
            android:fontFamily="@font/mulish_regular"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#002DE3" />

    </RelativeLayout>


</LinearLayout>