<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".AccountSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"
        tools:context=".Profile_Setup">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/avatar"
            >
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/avatar"
                android:src="@drawable/default_avatar"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:id="@+id/add_profile_pic"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/plus_icon"
                android:focusable="true"
                android:src="@drawable/plus"
                android:layout_toEndOf="@+id/avatar"
                android:layout_below="@+id/avatar"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/first_name"
                android:layout_width="320dp"
                android:layout_height="36dp"
                android:autofillHints=""
                android:background="@drawable/phone"
                android:inputType="text"
                android:padding="6dp"
                android:textSize="16sp"
                android:layout_marginVertical="16dp"
                android:paddingHorizontal="8dp"
                android:fontFamily="@font/mulish_medium"
                android:hint="@string/first_name_required"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="320dp"
                android:layout_height="36dp"
                android:autofillHints=""
                android:background="@drawable/phone"
                android:inputType="text"
                android:padding="6dp"
                android:textSize="16sp"
                android:paddingHorizontal="8dp"
                android:fontFamily="@font/mulish_medium"
                android:hint="@string/last_name_optional"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingHorizontal="30dp"
            >

            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="48dp"
                android:paddingVertical="18dp"
                android:fontFamily="@font/mulish_medium"
                android:layout_alignParentBottom="true"
                android:backgroundTint="#002DE3" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="#ffffff"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/to_chats"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/chats"
                android:src="@drawable/menu"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/to_more"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/more"
                android:src="@drawable/triple_dot"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>