<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/chats"
                android:textColor="#0F1828"
                android:textSize="24sp" />


            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/add_icon"
                android:src="@drawable/add"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/search_string"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginVertical="16dp"
            android:autofillHints=""
            android:background="@drawable/phone"
            android:hint="@string/search"
            android:inputType="text"
            android:padding="6dp"
            android:paddingHorizontal="8dp"
            android:textColor="#0F1828"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <ListView
            android:id="@+id/contact_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:divider="#bfbfbf" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="#ffffff"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/chats"
                android:src="@drawable/menu"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/to_settings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/more"
                android:src="@drawable/triple_dot"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>