<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".PhoneInput">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:textSize="24sp"
        android:textColor="#0F1828"
        android:fontFamily="@font/mulish_bold"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_height="wrap_content"
        android:text="@string/please_confirm_your_country_code_and_enter_your_phone_number"
        android:textSize="14sp"
        android:textColor="#0F1828"
        android:fontFamily="@font/mulish_semibold"
        android:layout_marginVertical="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:paddingHorizontal="30dp"
        android:layout_marginVertical="30dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1.65"
            android:autofillHints=""
            android:background="@drawable/phone"
            android:fontFamily="@font/mulish_regular"
            android:inputType="phone"
            android:textSize="16sp"
            app:ccp_defaultNameCode="PK"
            android:gravity="center_vertical"
            app:ccp_showNameCode="false"
            app:ccp_textSize="16sp"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_weight="3.35"
            android:layout_height="44dp"
            android:autofillHints="Enter Your Phone Number"
            android:background="@drawable/phone"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/enter_your_phone_number"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingHorizontal="30dp">

        <Button
            android:id="@+id/continue_to_otp"
            android:text="@string/continue_to_ptp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:paddingVertical="18dp"
            android:fontFamily="@font/mulish_regular"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#002DE3" />

    </RelativeLayout>

</LinearLayout>
