<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Otp_Verification">


    <TextView
        android:layout_width="295dp"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textSize="24sp"
        android:textColor="#0F1828"
        android:fontFamily="@font/mulish_bold"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="295dp"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_height="wrap_content"
        android:text="@string/we_have_sent_you_an_sms_with_the_code_to_62_1309_1710_1920"
        android:textSize="14sp"
        android:textColor="#0F1828"
        android:fontFamily="@font/mulish_semibold"
        android:layout_marginVertical="24dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        >

        <EditText
            android:id="@+id/otp_1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:layout_marginEnd="12dp"
            android:background="@drawable/phone"
            android:inputType="phone"
            android:paddingVertical="6dp"
            android:paddingHorizontal="8dp"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/otp_2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:layout_marginEnd="12dp"
            android:background="@drawable/phone"
            android:inputType="phone"
            android:paddingVertical="6dp"
            android:paddingHorizontal="8dp"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/otp_3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:layout_marginEnd="12dp"
            android:background="@drawable/phone"
            android:inputType="phone"
            android:paddingVertical="6dp"
            android:paddingHorizontal="8dp"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/otp_4"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:layout_marginEnd="12dp"
            android:background="@drawable/phone"
            android:inputType="phone"
            android:paddingVertical="6dp"
            android:paddingHorizontal="8dp"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp">

        <Button
            android:id="@+id/resend_code"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="24dp"
            android:layout_marginTop="47dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mulish_semibold"
            android:text="@string/resend_code"
            android:textAlignment="center"
            android:textColor="#002DE3"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>