<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/chats"
                android:textColor="#0F1828"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/to_account_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="4dp"
                android:clickable="true"
                android:focusable="true"
                >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/demo_pic"
                    android:contentDescription="@string/profile_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:layout_weight="1"
                        android:text="Amelia Kerr"
                        android:fontFamily="@font/mulish_regular"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/delete" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="#ffffff"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/to_chats"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/chats"
                android:src="@drawable/menu"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/to_more"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/more"
                android:src="@drawable/triple_dot"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>